Refactor receiptType and status icon (#119)
* Refactor receiptType and status icon

* Match style

* update chat bundle

Co-authored-by: jose.pereda <jose.pereda@gluonhq.com>

--- a/App/src/main/resources/com/gluonhq/chat/views/chat.css
+++ b/App/src/main/resources/com/gluonhq/chat/views/chat.css
@@ -208,6 +208,10 @@
     -fx-text-fill: -chat-text-fill-light;
 }
 
+.chat-message-status:read {
+    -fx-text-fill: -chat-text-fill-blue-light;
+}
+
 .user-icon {
     -fx-text-fill: -chat-text-fill-light;
     -fx-background-color: -chat-background;
