Add content-area stylable container.

--- a/src/main/resources/com/gluonhq/main.css
+++ b/src/main/resources/com/gluonhq/main.css
@@ -15,3 +15,16 @@
 .status-bar {
     -fx-padding: 10;
 }
+
+.rich-text > .scroll-pane {
+    -fx-padding: 20;
+}
+
+.rich-text .content-area {
+    -fx-background-color: white;
+    -fx-border-color: black;
+}
+
+.rich-text .content-area > .layers > .text-flow {
+    -fx-padding: 10;
+}
