--- a/src/main/resources/com/gluonhq/main.css
+++ b/src/main/resources/com/gluonhq/main.css
@@ -16,15 +16,15 @@
     -fx-padding: 10;
 }
 
-.rich-text > .scroll-pane {
+.rich-text-area > .scroll-pane {
     -fx-padding: 20;
 }
 
-.rich-text .content-area {
+.rich-text-area .content-area {
     -fx-background-color: white;
     -fx-border-color: black;
 }
 
-.rich-text .content-area > .layers > .text-flow {
+.rich-text-area .content-area > .layers > .text-flow {
     -fx-padding: 10;
 }
