Add readonly pseudoclass to control

--- a/src/main/resources/com/gluonhq/main.css
+++ b/src/main/resources/com/gluonhq/main.css
@@ -25,6 +25,11 @@
     -fx-border-color: black;
 }
 
+.rich-text-area:readonly .content-area {
+    -fx-background-color: lightblue;
+    -fx-border-color: darkgray;
+}
+
 .rich-text-area .content-area > .layers > .text-flow {
     -fx-padding: 10;
 }
