--- a/src/main/resources/com/gluonhq/richtext/rich-text-area.css
+++ b/src/main/resources/com/gluonhq/richtext/rich-text-area.css
@@ -1,12 +1,13 @@
-.rich-text-area > .scroll-pane {
-    -fx-padding: 5;
+.rich-text-area .paragraph-list-view {
 }
 
-.rich-text-area .content-area {
+.rich-text-area .paragraph-tile > .content-area {
+    /*-fx-background-color: #000ff010;*/
 }
 
-.rich-text-area .content-area > .layers > .text-flow {
-    -fx-padding: 10;
+.rich-text-area .paragraph-tile > .content-area > .layers > .text-flow {
+    /*-fx-background-color: #ff000010;*/
+    /*-fx-padding: 2;*/
 }
 
 .rich-text-area .caret {
@@ -16,4 +17,21 @@
 .rich-text-area .selection {
     -fx-stroke: transparent;
     -fx-fill: rgba(71, 145, 245, 0.3);
+}
+
+.list-cell {
+    -fx-padding: 0em;
+}
+.list-cell,
+.list-cell:odd {
+    -fx-background: white;
+}
+
+.list-cell:filled:selected,
+.list-view:focused > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:selected,
+.list-view:focused > .virtual-flow > .clipped-container > .sheet > .list-cell:focused {
+    -fx-background: white;
+    -fx-background-color: white;
+    -fx-table-cell-border-color: white;
+    -fx-background-insets: 0;
 }
