--- a/src/main/resources/com/gluonhq/richtextarea/rich-text-area.css
+++ b/src/main/resources/com/gluonhq/richtextarea/rich-text-area.css
@@ -12,6 +12,29 @@
 .rich-text-area .paragraph-tile > .graphic-box {
     /*-fx-background-color: #000ff010;*/
 }
+.rich-text-area .paragraph-tile > .graphic-box > .numbered-list-label {
+    -fx-text-fill: black;
+}
+.rich-text-area .paragraph-tile > .graphic-box > .bulleted-list-shape-1 {
+    -fx-fill: black;
+    -fx-stroke: black;
+}
+.rich-text-area .paragraph-tile > .graphic-box > .bulleted-list-shape-2 {
+    -fx-fill: transparent;
+    -fx-stroke: black;
+}
+.rich-text-area .paragraph-tile > .graphic-box > .bulleted-list-shape-3 {
+    -fx-fill: black;
+    -fx-stroke: black;
+    -fx-arc-width: 1;
+    -fx-arc-height: 1;
+}
+.rich-text-area .paragraph-tile > .graphic-box > .bulleted-list-shape-4 {
+    -fx-fill: transparent;
+    -fx-stroke: black;
+    -fx-arc-width: 1;
+    -fx-arc-height: 1;
+}
 
 .rich-text-area .paragraph-tile > .content-area > .layers > .text-flow {
     /*-fx-background-color: #ff000010;*/
